[package]
name = "rust_tenda"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "=0.6.3"
dotenvy = "0.15.7"
md5 = "0.7.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
reqwest = { version = "0.12.15" , features = ["cookies", "blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
